# oiiai

./: MANIFEST.in  README.md  pyproject.toml
src/oiiai/: __main__.py
